--- a/buy.html
+++ b/buy.html
@@ -93,7 +93,7 @@
                                 "preload" : false, 
                                 "css" : {
                                     "width" : "600px", 
-                                    "border-radius" : "20px",
+                                    "border-radius" : "10px",
                                     "overflow" : "hidden"
                             }}}'>
                                                                 <i class="lnr lnr-user"></i>&nbsp; &nbsp;About Me</a></li>
@@ -106,7 +106,7 @@
                                 "preload" : false, 
                                 "css" : {
                                     "width" : "600px", 
-                                    "border-radius" : "20px",
+                                    "border-radius" : "10px",
                                     "overflow" : "hidden"
                             }}}'>
                                                                 <i class="lnr lnr-cart"></i>&nbsp; &nbsp;Orders</a></li>
@@ -119,7 +119,7 @@
                                 "preload" : false, 
                                 "css" : {
                                     "width" : "600px", 
-                                    "border-radius" : "20px",
+                                    "border-radius" : "10px",
                                     "overflow" : "hidden"
                             }}}'>
                                                                 <i class="lnr lnr-list"></i>&nbsp; &nbsp;Listings</a></li>
@@ -387,6 +387,26 @@
                 </div>
         </div>
 -->
+        <!-- Modal -->
+        <div class="modal fade" id="myModal">
+                <div class="modal-dialog">
+                        <div class="modal-content bmd-modalContent">
+
+                                <div class="modal-body">
+
+                                        <div class="close-button">
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                                                aria-hidden="true">&times;</span></button>
+                                        </div>
+                                        <div class="embed-responsive embed-responsive-16by9">
+                                                <iframe class="embed-responsive-item" frameborder="0"></iframe>
+                                        </div>
+                                </div>
+
+                        </div><!-- /.modal-content -->
+                </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+
         <!-- Vendor-JS -->
         <script src="js/vendor/jquery-1.12.4.min.js"></script>
         <script src="js/vendor/jquery-ui.js"></script>
